adjusting half-width img fixes spacing

--- a/assets/styles/layouts/_portfolio-project.scss
+++ b/assets/styles/layouts/_portfolio-project.scss
@@ -445,7 +445,7 @@
 		    width: 48%;
 		    //float: left;
 		    //padding: 0 1% 2% 0;
-				margin-top: 2em;
+				margin-top: 4%;
 			}
 			img:nth-child(even) {
 				float: right;
